Fixed some contact spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+div {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
